k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-api-service
spec:
  type: ClusterIP
  selector:
    app: spring-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
